# hackAI_230629

./: README.md  pyproject.toml
src/: main.py
src/agents/: temperature_alert.py  terminal_interface.py
src/messages/: temperature_data.py
